<resources>
    <string name="app_name">Gallery</string>
    <string name="name_label">Album name</string>
    <string name="save_label">Save</string>
    <string name="cancel_label">Back</string>
    <string name="title_activity_add_edit_album">Edit album</string>
    <string name="add">Add</string>
    <string name="add_label">Add</string>
    <string name="title_activity_add_album">Add album</string>
    <string name="previous">Prev</string>
    <string name="next">next</string>
    <string name="delete">Delete img</string>
    <string name="delete_album">Delete album</string>
    <string name="move">Move img</string>
    <string name="title_activity_move">Move image</string>
    <string name="searchTag">Search</string>
    <string name="tagType">Tag Type:</string>
    <string name="tagVal">Tag Value</string>
    <string name="tag">Add tag</string>
    <string name="tag_name_label">Tag name</string>
    <string name="tag_type_label">Tag type</string>
    <string name="title_activity_add_tag">Add tag</string>
    <string name="tags_label">Note: (click on tag to remove)</string>
    <string-array name="tags_type">
        <item>Person</item>
        <item>Location</item>
    </string-array>
</resources>