<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:id="@+id/root"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:padding="20dp">

        <!--  Name label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="2dp"
            android:text="@string/name_label" />

        <!-- Name field -->
        <EditText
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background" />

        <!--  Buttons for save and cancel -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/album_save"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:background="@color/movieBack"
                android:onClick="save"
                android:text="@string/save_label"
                android:textColor="@color/movieFore"
                android:textSize="16sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/delete_album"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:background="@color/movieBack"
                android:onClick="delete_album"
                android:text="@string/delete_album"
                android:textColor="@color/movieFore"
                android:textSize="16sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/album_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/movieBack"
                android:onClick="cancel"
                android:text="@string/cancel_label"
                android:textColor="@color/movieFore"
                android:textSize="16sp"
                app:backgroundTint="@null" />

        </LinearLayout>

        <ImageView
            android:id="@+id/show_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            tools:srcCompat="@tools:sample/avatars" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:id="@+id/previous_image"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:background="@color/movieBack"
                android:onClick="previous_image"
                android:text="@string/previous"
                android:textColor="@color/movieFore"
                android:textSize="16sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/delete_image"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="15dp"
                android:background="@color/movieBack"
                android:onClick="delete_image"
                android:text="@string/delete"
                android:textColor="@color/movieFore"
                android:textSize="16sp"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/next_image"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@color/movieBack"
                android:onClick="next_image"
                android:text="@string/next"
                android:textColor="@color/movieFore"
                android:textSize="16sp"
                app:backgroundTint="@null" />

        </LinearLayout>

        <Button
            android:id="@+id/move_image"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="370dp"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="@color/movieBack"
            android:onClick="move_image"
            android:text="@string/move"
            android:textColor="@color/movieFore"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <ListView
            android:id="@+id/image_list"
            android:layout_width="match_parent"
            android:layout_height="357dp" />
    </LinearLayout>
</ScrollView>

