<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp">

    <!--  Name label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/tag_type_label" />

    <Spinner
        android:id="@+id/tag_spinner"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/tag_name_label"
        />

    <!-- Name field -->
    <EditText
        android:id="@+id/tag_name"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:background="@android:drawable/editbox_background" />

    <!--  Buttons for save and cancel -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="86dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/tag_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="15dp"
            android:background="@color/movieBack"
            android:onClick="save"
            android:text="@string/add_label"
            android:textColor="@color/movieFore"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/tag_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/movieBack"
            android:onClick="cancel"
            android:text="@string/cancel_label"
            android:textColor="@color/movieFore"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</LinearLayout>

